Closed
Bug 429707
Opened 18 years ago
Closed 18 years ago
nsPrintSettingsGTK needs error handling for invalid file names
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9
People
(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)
Details
(Keywords: crash)
Attachments
(1 file)
|
2.52 KB,
patch
|
roc
:
review+
roc
:
superreview+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
The first testcase in bug 429678 leads to a crash on Linux because it
sets "printSettings.toFileName = 'C:\\test.pdf';" and nsPrintSettingsGTK
doesn't check for errors when trying to open the file.
Patch coming up...
| Assignee | ||
Comment 1•18 years ago
|
||
Add a bit of error handling...
This results in a NS_ERROR_FILE_UNRECOGNIZED_PATH exception in the Error
Console for the testcase, which is the expected result.
Attachment #316475 -
Flags: superreview?
Attachment #316475 -
Flags: review?
| Assignee | ||
Updated•18 years ago
|
Attachment #316475 -
Flags: superreview?(roc)
Attachment #316475 -
Flags: superreview?
Attachment #316475 -
Flags: review?(roc)
Attachment #316475 -
Flags: review?
Attachment #316475 -
Flags: superreview?(roc)
Attachment #316475 -
Flags: superreview+
Attachment #316475 -
Flags: review?(roc)
Attachment #316475 -
Flags: review+
Comment 2•18 years ago
|
||
Comment on attachment 316475 [details] [diff] [review]
Patch rev. 1
Add error handling to stop crashes.
Attachment #316475 -
Flags: approval1.9?
Comment 3•18 years ago
|
||
Comment on attachment 316475 [details] [diff] [review]
Patch rev. 1
a1.9=beltzner
Attachment #316475 -
Flags: approval1.9? → approval1.9+
| Assignee | ||
Comment 4•18 years ago
|
||
mozilla/widget/src/gtk2/nsPrintSettingsGTK.cpp 1.11
-> FIXED
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9
You need to log in
before you can comment on or make changes to this bug.
Description
•