Add error handling for invalid filename. b=429707 r+sr=roc a1.9=beltzner